--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div>
                     <h3 class="subtitle">About Me</h3>
                     <p class="lead">
-                      I am a fourth year PhD student in the Department of Computer Science at PUCIT, advised by <a href='https://nazarkhan@pucit.edu.pk/'>Dr Nazar Khan]</a>.
+                      I am a fourth year PhD student in the Department of Computer Science at PUCIT, advised by <a href='https://nazarkhan@pucit.edu.pk/'>Dr Nazar Khan</a>.
                       My research interests are in computer vision, machine learning, deep learning and image processing.
                     </p>
                 </div>
