--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Hyojin Bahng</title>
+    <title>Arbish Akram</title>
     <style type="text/css">
     img.profile {
 	border-radius: 50%;
@@ -36,8 +36,115 @@
     .ttitle {
     font-size: 1.2rem;
     text-align: left;
-    }
-	    
+    }	    
+    </style>
+    <style type="text/css">
+	body {
+		margin-top: 30px;
+		margin-bottom: 30px;
+		margin-left: 100px;
+		margin-right: 100px;
+	}
+	p {
+		margin-top: 0px;
+		margin-bottom: 0px;
+	}
+
+	.caption {
+		font-size: 34px;
+		font-weight: normal;
+		color: #000;
+		font-family: Constantia, "Lucida Bright", "DejaVu Serif", Georgia, serif;
+	}
+	.caption-1 {
+		font-size: 16px;
+		font-family: Tahoma, Geneva, sans-serif;
+	}
+	.caption-2 {
+		font-size: 16px;
+		font-family: Tahoma, Geneva, sans-serif;
+		font-weight: bold;
+		color: #990000;
+	}
+	.caption-3 {
+		font-size: 16px;
+		font-family: Tahoma, Geneva, sans-serif;
+		font-weight: bold;
+		color: #F00;
+	}
+	.caption-4 {
+		font-size: 16px;
+		font-family: Tahoma, Geneva, sans-serif;
+		color: #990000;
+	}
+	.content {
+		font-size: 16px;
+		font-family: Tahoma, Geneva, sans-serif;
+		text-align: justify;
+	}
+	.content a {
+		font-size: 16px;
+		font-family: Tahoma, Geneva, sans-serif;
+		color: #000;
+	}
+	.content strong a {
+		font-size: 16px;
+		font-family: Tahoma, Geneva, sans-serif;
+		color: #990000;
+	}
+	heading {
+	  font-family: 'Lato', Verdana, Helvetica, sans-serif;*/
+	  font-size: 15px;
+	  font-weight: 700
+	}
+	.title-small {
+		font-size: 20px;
+		font-family: Georgia, "Times New Roman", Times, serif;
+		font-weight: bold;
+		color: #F90;
+	}
+	.title-large {
+		font-size: 28px;
+		font-family: Georgia, "Times New Roman", Times, serif;
+		font-weight: bold;
+		color: #000;
+	}
+	.margin {
+		font-size: 10px;
+		line-height: 10px;
+	}
+	.margin-small {
+		font-size: 5px;
+		line-height: 5px;
+	}
+	.margin-large {
+		font-size: 16px;
+		line-height: 16px;
+	}
+	a:link {
+		text-decoration: none;
+	}
+	a:visited {
+		text-decoration: none;
+	}
+	content a:link {
+		text-decoration: none;
+	}
+	content a:visited {
+		text-decoration: none;
+	}
+	a:hover {
+		text-decoration: underline;
+	}
+	a:active {
+		text-decoration: underline;
+		color: #06F;
+		font-family: Tahoma, Geneva, sans-serif;
+	}
+	strong a:active {
+		text-decoration: underline;
+		color: #06F;
+	}
     </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141257534-1"></script>
@@ -102,7 +209,7 @@
 			<div class="paper" id="us-gan">    
 			<p class="content">            
 <!-- 			<strong><a href="">project</a></strong> | -->
-			<strong><a href="">paper</a></strong> |
+			<strong><a href="">paper</a></strong> 
 <!-- 			<strong><a href="">YouTube</a></strong> | -->
 <!-- 			<strong><a href="">Talk</a></strong> | -->
 <!-- 			<strong><a href="">Slides</a></strong> | -->
