--- a/index.html
+++ b/index.html
@@ -195,16 +195,15 @@
                 </div>
               
 		<table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
-		  <tr> <td width="20%" valign="top"><a href="" class="hoverZoomLink"><img src="https://github.com/arbishakram/arbishakram.github.io/blob/main/papers/us-gan/us-gan-arch.jpg" alt="us-gan" width="100%" border="1"></a>
+		  <tr> <td width="20%" valign="top"><a href="" class="hoverZoomLink"><img src="papers/us-gan/us-gan-arch.jpg" alt="us-gan" width="100%" border="1"></a>
 			<td width="80%" valign="top">
 			<p>
 			<heading>US-GAN: On the importance of Ultimate Skip Connection for Facial Expression Synthesis</heading></a><br>
-			<p class="margin">&nbsp;</p>        
+<!-- 			<p class="margin">&nbsp;</p>         -->
 			<p class="content"><strong>Arbish Akram</strong>, Nazar Khan</a></p>
-			<p class="margin-small">&nbsp;</p>
-			<p class="content"><em>arXiv</em>, 2021
-			  <font color="red">(oral presentation)</font>
-			<p class="margin">&nbsp;</p>
+<!-- 			<p class="margin-small">&nbsp;</p> -->
+			<p class="content"><em>arXiv</em>, 2021			 
+<!-- 			<p class="margin">&nbsp;</p> -->
 
 			<div class="paper" id="us-gan">    
 			<p class="content">            
