--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 	<div class='section_div'>
 	<table id="personal_info">
 	<tr>
-	<td><img class="photo_of_me" src="arbish.png" width=180px style="border: 1px solid black; float:left; margin-right:15px"/></td>
+	<td><img class="photo_of_me" src="https://github.com/arbishakram/web_page_imgs/blob/main/arbish.png" width=180px style="border: 1px solid black; float:left; margin-right:15px"/></td>
 	<td>
 	<div id="DocInfo">
 		<h1>Arbish Akram</h1>
