--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 	<table class="pub_table">
 	<tr>
-	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img2" src='https://github.com/arbishakram/web_page_imgs/blob/main/us-gan/us-gan.png'/></a></div></td>
+	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img2" src='papers/us-gan/us-gan.png'/></a></div></td>
 	 <td class="pub_td2"><b>US-GAN: On the importance of Ultimate Skip Connection for Facial Expression Synthesis</b>
 	  <br>Arbish Akram, <a href='https://nazarkhan@pucit.edu.pk/'>Nazar Khan</a>
           <br><i>ArXiv 2021</i>.
