--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 	</td></tr>
 
 	<tr>
-	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='https://github.com/arbishakram/web_page_imgs/blob/main/pixel-rr/pixel-rr.png'/></a></div></td>
+	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/pixel-rr/pixel-rr.png'/></a></div></td>
 	 <td class="pub_td2"><b>Pixel-based Facial Expression Synthesis</b>
          <br>Arbish Akram, <a href='https://nazarkhan@pucit.edu.pk/'>Nazar Khan</a>
 	 <br><i>ArXiv 2020</i>. <br>[<a href="https://arxiv.org/abs/2010.14397">Paper</a>]
@@ -233,7 +233,7 @@
 	</td></tr>
 		
 	<tr>
-	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='https://github.com/arbishakram/web_page_imgs/blob/main/mr/mr.png'/></a></div></td>
+	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/mr/mr.png'/></a></div></td>
 	 <td class="pub_td2"><b>Masked Linear Regression for Learning Local Receptive Fields for Facial Expression Synthesis</b>
          <br><a href='https://nazarkhan@pucit.edu.pk/'>Nazar Khan</a>, <span class="font-weight-bold">Arbish Akram</span>, <a href='https://itu.edu.pk/faculty-itu/dr-arif-mahmood/'>Arif Mahmood</a>, Sania Ashraf, Kashif Murtaza
 	 <br><i>ArXiv 2020</i>. <br>[<a href="https://link.springer.com/content/pdf/10.1007/s11263-019-01256-3.pdf">Paper</a>]
@@ -253,7 +253,7 @@
 	</td></tr>
 
 	<tr>
-	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='https://github.com/arbishakram/web_page_imgs/blob/main/lifesavior/lifesavior.png'/></a></div></td>
+	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/lifesavior/lifesavior.png'/></a></div></td>
 	 <td class="pub_td2"><b>Life Savior: An Integrated Emergency Response System</b>
          <br>Arbish Akram, Maria Anjum, Mariam Rehman, Hafsah Bukhary, Hifza Amir, Rafia Qaisar
 	 <br><i>ICIT 2017</i>. <br>[<a href="https://ieeexplore.ieee.org/document/8079981">Paper</a>]
