--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 		<h4>PhD Student <br/>
                 PUCIT<br/>
 		arbishakram [at] pucit [dot] edu [dot] pk.</h4>
-		<a href="https://scholar.google.com/citations?user=ROILf3EAAAAJ&hl=en&oi=ao">Google Scholar</a> / <a href="https://github.com/phillipi">GitHub</a> / <a href="https://twitter.com/phillip_isola">Twitter</a>
+		<a href="">Google Scholar</a> / <a href="">GitHub</a> 
 	</div><br>
 	</td>
 	</tr>
