--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 	  <br>Arbish Akram, <a href='https://nazarkhan@pucit.edu.pk/'>Nazar Khan</a>
           <br><i>ArXiv 2021</i>.
           <br>[<a href="https://arxiv.org/abs/2112.13002">Paper</a>]
-          [<a shape="rect" href="javascript:togglebib('usgan')" class="togglebib">Bibtex</a>]
+          [<a shape="rect" href="javascript:togglebib()" class="togglebib">Bibtex</a>]
 		<pre xml:space="preserve" style="display: none;">
 		@article{akram2021us,
 		  title={US-GAN: On the importance of Ultimate Skip Connection for Facial Expression Synthesis},
