--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
 <div class='section_div'>
 	<h2>About me</h2>
-	<p>I am a fourth year PhD student in the Department of Computer Science at PUCIT, advised by <a href='https://		nazarkhan@pucit.edu.pk/'>Dr Nazar Khan</a>. <br>
+	<p>I am a fourth year PhD student in the Department of Computer Science at PUCIT, advised by <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Dr Nazar Khan</a>. <br>
 	 My research interests are in computer vision, machine learning, deep learning and image processing.
 	<br>
 </div>
@@ -200,7 +200,7 @@
 	<tr>
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img2" src='papers/us-gan/us-gan.png'/></a></div></td>
 	 <td class="pub_td2"><b>US-GAN: On the importance of Ultimate Skip Connection for Facial Expression Synthesis</b>
-	  <br>Arbish Akram, <a href='https://nazarkhan@pucit.edu.pk/'>Nazar Khan</a>
+	  <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
           <br><i>ArXiv 2021</i>.
           <br>[<a href="https://arxiv.org/abs/2112.13002">Paper</a>]
           [<a shape="rect" href="javascript:togglebib()" class="togglebib">Bibtex</a>]
@@ -217,7 +217,7 @@
 	<tr>
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/pixel-rr/pixel-rr.png'/></a></div></td>
 	 <td class="pub_td2"><b>Pixel-based Facial Expression Synthesis</b>
-         <br>Arbish Akram, <a href='https://nazarkhan@pucit.edu.pk/'>Nazar Khan</a>
+         <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
 	 <br><i>ArXiv 2020</i>. <br>[<a href="https://arxiv.org/abs/2010.14397">Paper</a>]
          [<a shape="rect" href="javascript:togglebib('pixel-rr')" class="togglebib">Bibtex</a>]
 		<pre xml:space="preserve" style="display: none;">
@@ -235,7 +235,7 @@
 	<tr>
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/mr/mr.png'/></a></div></td>
 	 <td class="pub_td2"><b>Masked Linear Regression for Learning Local Receptive Fields for Facial Expression Synthesis</b>
-         <br><a href='https://nazarkhan@pucit.edu.pk/'>Nazar Khan</a>, <span class="font-weight-bold">Arbish Akram</span>, <a href='https://itu.edu.pk/faculty-itu/dr-arif-mahmood/'>Arif Mahmood</a>, Sania Ashraf, Kashif Murtaza
+         <br><a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>, <span class="font-weight-bold">Arbish Akram</span>, <a href='https://itu.edu.pk/faculty-itu/dr-arif-mahmood/'>Arif Mahmood</a>, Sania Ashraf, Kashif Murtaza
 	 <br><i>ArXiv 2020</i>. <br>[<a href="https://link.springer.com/content/pdf/10.1007/s11263-019-01256-3.pdf">Paper</a>]
          [<a shape="rect" href="javascript:togglebib('mr')" class="togglebib">Bibtex</a>]
 		<pre xml:space="preserve" style="display: none;">
