--- a/index.html
+++ b/index.html
@@ -231,7 +231,26 @@
 		}
 	      </pre>  
 	</td></tr>
-		
+	
+	<tr>
+	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/orthogan/orthogan_teaser.png'/></a></div></td>
+	 <td class="pub_td2"><b>OrthoGAN: Visualizing teeth after Orthodontics treatment using Generative Models</b>
+         <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
+	 <br><i>ArXiv 2020</i>. <br>[<a href="papers/orthogan/orthogan_preprint.pdf">Paper</a>]
+         [<a shape="rect" href="javascript:togglebib('pixel-rr')" class="togglebib">Bibtex</a>]
+		<pre xml:space="preserve" style="display: none;">
+		@inproceedings{akram2021pixel,
+		  title={Pixel-based Facial Expression Synthesis},
+		  author={Akram, Arbish and Khan, Nazar},
+		  booktitle={2020 25th International Conference on Pattern Recognition (ICPR)},
+		  pages={9733--9739},
+		  year={2021},
+		  organization={IEEE}
+		}
+	      </pre>  
+	</td></tr>
+	
+	
 	<tr>
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/mr/mr.png'/></a></div></td>
 	 <td class="pub_td2"><b>Masked Linear Regression for Learning Local Receptive Fields for Facial Expression Synthesis</b>
