--- a/index.html
+++ b/index.html
@@ -218,7 +218,10 @@
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/pixel-rr/pixel-rr.png'/></a></div></td>
 	 <td class="pub_td2"><b>Pixel-based Facial Expression Synthesis</b>
          <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
-	 <br><i>ICPR 2021</i>. <br>[<a href="https://arxiv.org/abs/2010.14397">Paper</a>]
+	 <br><i>ICPR 2021</i>. 
+	 <br>[<a href="https://arxiv.org/abs/2010.14397">Paper</a>]
+	 <br>[<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/pixel_fes/ICPR2020_presentation.pdf">Slides</a>]
+	 <br>[<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/pixel_fes/ICPR2020_poster.pdf">Poster</a>]
          [<a shape="rect" href="javascript:togglebib('pixel-rr')" class="togglebib">Bibtex</a>]
 		<pre xml:space="preserve" style="display: none;">
 		@inproceedings{akram2021pixel,
@@ -236,7 +239,8 @@
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/orthogan/orthogan_teaser.png'/></a></div></td>
 	 <td class="pub_td2"><b>OrthoGAN: Visualizing teeth after Orthodontics treatment using Generative Models</b>
          <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
-	 <br><i></i>ArXiv 2021. <br>[<a href="papers/orthogan/orthogan_preprint.pdf">Paper</a>]
+	 <br><i></i>ArXiv 2021. 
+	 <br>[<a href="papers/orthogan/orthogan_preprint.pdf">Paper</a>]
          [<a shape="rect" href="javascript:togglebib('pixel-rr')" class="togglebib">Bibtex</a>]
 		<pre xml:space="preserve" style="display: none;">
 		@inproceedings{akram2021pixel,
@@ -255,7 +259,10 @@
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/mr/mr.png'/></a></div></td>
 	 <td class="pub_td2"><b>Masked Linear Regression for Learning Local Receptive Fields for Facial Expression Synthesis</b>
          <br><a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>, <span class="font-weight-bold">Arbish Akram</span>, <a href='https://itu.edu.pk/faculty-itu/dr-arif-mahmood/'>Arif Mahmood</a>, Sania Ashraf, Kashif Murtaza
-	 <br><i>IJCV 2020</i>. <br>[<a href="https://link.springer.com/content/pdf/10.1007/s11263-019-01256-3.pdf">Paper</a>]
+	 <br><i>IJCV 2020</i>. 
+	 <br>[<a href="https://link.springer.com/content/pdf/10.1007/s11263-019-01256-3.pdf">Paper</a>]
+	 <br>[<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/presentation_itu_15_10_2019.pdf">Slides</a>]	
+	 <br>[<a href="https://github.com/arbishakram/masked_regression_code">Github</a>]
          [<a shape="rect" href="javascript:togglebib('mr')" class="togglebib">Bibtex</a>]
 		<pre xml:space="preserve" style="display: none;">
 		@article{khan2020masked,
@@ -275,7 +282,8 @@
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/lifesavior/lifesavior.png'/></a></div></td>
 	 <td class="pub_td2"><b>Life Savior: An Integrated Emergency Response System</b>
          <br>Arbish Akram, Maria Anjum, Mariam Rehman, Hafsah Bukhary, Hifza Amir, Rafia Qaisar
-	 <br><i>ICIT 2017</i>. <br>[<a href="https://ieeexplore.ieee.org/document/8079981">Paper</a>]
+	 <br><i>ICIT 2017</i>. 
+	 <br>[<a href="https://ieeexplore.ieee.org/document/8079981">Paper</a>]
          [<a shape="rect" href="javascript:togglebib('lifesavior')" class="togglebib">Bibtex</a>]
 		<pre xml:space="preserve" style="display: none;">
 		@inproceedings{akram2017life,
