--- a/index.html
+++ b/index.html
@@ -219,7 +219,9 @@
 	 <td class="pub_td2"><b>Pixel-based Facial Expression Synthesis</b>
          <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
 	 <br><i>ICPR 2021</i>. 
-	 <br>[<a href="https://arxiv.org/abs/2010.14397">Paper</a>][<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/pixel_fes/ICPR2020_presentation.pdf">Slides</a>] [<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/pixel_fes/ICPR2020_poster.pdf">Poster</a>]
+	 <br>[<a href="https://arxiv.org/abs/2010.14397">Paper</a>]
+	 [<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/pixel_fes/ICPR2020_presentation.pdf">Slides</a>] 
+	 [<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/pixel_fes/ICPR2020_poster.pdf">Poster</a>]
          [<a shape="rect" href="javascript:togglebib('pixel-rr')" class="togglebib">Bibtex</a>]
 		<pre xml:space="preserve" style="display: none;">
 		@inproceedings{akram2021pixel,
@@ -258,8 +260,10 @@
 	 <td class="pub_td2"><b>Masked Linear Regression for Learning Local Receptive Fields for Facial Expression Synthesis</b>
          <br><a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>, <span class="font-weight-bold">Arbish Akram</span>, <a href='https://itu.edu.pk/faculty-itu/dr-arif-mahmood/'>Arif Mahmood</a>, Sania Ashraf, Kashif Murtaza
 	 <br><i>IJCV 2020</i>. 
-	 <br>[<a href="https://link.springer.com/content/pdf/10.1007/s11263-019-01256-3.pdf">Paper</a>] [<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/presentation_itu_15_10_2019.pdf">Slides</a>]	
-	 [<a href="https://github.com/arbishakram/masked_regression_code">Github</a>] [<a shape="rect" href="javascript:togglebib('mr')" class="togglebib">Bibtex</a>]
+	 <br>[<a href="https://link.springer.com/content/pdf/10.1007/s11263-019-01256-3.pdf">Paper</a>] 
+	 [<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/presentation_itu_15_10_2019.pdf">Slides</a>]	
+	 [<a href="https://github.com/arbishakram/masked_regression_code">Github</a>] 
+	 [<a shape="rect" href="javascript:togglebib('mr')" class="togglebib">Bibtex</a>]
 		<pre xml:space="preserve" style="display: none;">
 		@article{khan2020masked,
 		  title={Masked linear regression for learning local receptive fields for facial expression synthesis},
