--- a/index.html
+++ b/index.html
@@ -203,15 +203,7 @@
 	  <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
           <br><i>ArXiv 2021</i>.
           <br>[<a href="https://arxiv.org/abs/2112.13002">Paper</a>]
-          [<a shape="rect" href="javascript:togglebib()" class="togglebib">Bibtex</a>]
-		<pre xml:space="preserve" style="display: none;">
-		@article{akram2021us,
-		  title={US-GAN: On the importance of Ultimate Skip Connection for Facial Expression Synthesis},
-		  author={Akram, Arbish and Khan, Nazar},
-		  journal={arXiv preprint arXiv:2112.13002},
-		  year={2021}
-		}
-	      </pre>  
+          [<a href="papers/usgan/usgan.txt">Bibtex</a>]
 	</td></tr>
 
 	<tr>
@@ -222,36 +214,16 @@
 	 <br>[<a href="https://arxiv.org/abs/2010.14397">Paper</a>]
 	 [<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/pixel_fes/ICPR2020_presentation.pdf">Slides</a>] 
 	 [<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/pixel_fes/ICPR2020_poster.pdf">Poster</a>]
-         [<a shape="rect" href="javascript:togglebib('pixel-rr')" class="togglebib">Bibtex</a>]
-		<pre xml:space="preserve" style="display: none;">
-		@inproceedings{akram2021pixel,
-		  title={Pixel-based Facial Expression Synthesis},
-		  author={Akram, Arbish and Khan, Nazar},
-		  booktitle={2020 25th International Conference on Pattern Recognition (ICPR)},
-		  pages={9733--9739},
-		  year={2021},
-		  organization={IEEE}
-		}
-	      </pre>  
+         [<a href="papers/pixel-rr/pixel.rr.txt">Bibtex</a>] 
 	</td></tr>
 	
 	<tr>
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/orthogan/orthogan_teaser.png'/></a></div></td>
 	 <td class="pub_td2"><b>OrthoGAN: Visualizing teeth after Orthodontics treatment using Generative Models</b>
          <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
-	 <br><i></i>ArXiv 2021. 
+<!-- 	 <br><i></i>ArXiv 2021.  -->
 	 <br>[<a href="papers/orthogan/orthogan_preprint.pdf">Paper</a>]
-         [<a shape="rect" href="javascript:togglebib('pixel-rr')" class="togglebib">Bibtex</a>]
-		<pre xml:space="preserve" style="display: none;">
-		@inproceedings{akram2021pixel,
-		  title={Pixel-based Facial Expression Synthesis},
-		  author={Akram, Arbish and Khan, Nazar},
-		  booktitle={2020 25th International Conference on Pattern Recognition (ICPR)},
-		  pages={9733--9739},
-		  year={2021},
-		  organization={IEEE}
-		}
-	      </pre>  
+         [<a href="papers/mr/mr.txt">Bibtex</a>]  
 	</td></tr>
 	
 	
@@ -263,19 +235,7 @@
 	 <br>[<a href="https://link.springer.com/content/pdf/10.1007/s11263-019-01256-3.pdf">Paper</a>] 
 	 [<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/presentation_itu_15_10_2019.pdf">Slides</a>]	
 	 [<a href="https://github.com/arbishakram/masked_regression_code">Github</a>] 
-	 [<a shape="rect" href="javascript:togglebib('mr')" class="togglebib">Bibtex</a>]
-		<pre xml:space="preserve" style="display: none;">
-		@article{khan2020masked,
-		  title={Masked linear regression for learning local receptive fields for facial expression synthesis},
-		  author={Khan, Nazar and Akram, Arbish and Mahmood, Arif and Ashraf, Sania and Murtaza, Kashif},
-		  journal={International Journal of Computer Vision},
-		  volume={128},
-		  number={5},
-		  pages={1433--1454},
-		  year={2020},
-		  publisher={Springer}
-		}
-	      </pre>  
+	 [<a href="papers/mr/mr.txt">Bibtex</a>]		
 	</td></tr>
 
 	<tr>
@@ -284,17 +244,7 @@
          <br>Arbish Akram, Maria Anjum, Mariam Rehman, Hafsah Bukhary, Hifza Amir, Rafia Qaisar
 	 <br><i>ICIT 2017</i>. 
 	 <br>[<a href="https://ieeexplore.ieee.org/document/8079981">Paper</a>]
-         [<a shape="rect" href="javascript:togglebib('lifesavior')" class="togglebib">Bibtex</a>]
-		<pre xml:space="preserve" style="display: none;">
-		@inproceedings{akram2017life,
-		  title={Life savior: an integrated emergency response system},
-		  author={Akram, Arbish and Anjum, Maria and Rehman, Mariam and Bukhary, Hafsah and Amir, Hifza and Qaisar, Rafia},
-		  booktitle={2017 8th International Conference on Information Technology (ICIT)},
-		  pages={1002--1006},
-		  year={2017},
-		  organization={IEEE}
-		}
-	      </pre>  
+         [<a href="papers/lifesavior/lifesavior.txt">Bibtex</a>]		
 	</td></tr>
 
 
