--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=GBK">
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      {%- seo -%}
+      <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+      {%- feed_meta -%}
+      {%- if jekyll.environment == 'production' and site.google_analytics -%}
+      {%- include google-analytics.html -%}
+      {%- endif -%}
+      <meta name="google-site-verification" content="MfxpNiv0HZrHV7WBv1qOGAHf60DQnY-EjW4kFE38S6Y" />
 <script async src="./analytics.js"></script><script type="text/javascript" src="./hidebib.js"></script>
 <title>Arbish Akram</title>
 <style type="text/css">
