--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       {%- if jekyll.environment == 'production' and site.google_analytics -%}
       {%- include google-analytics.html -%}
       {%- endif -%}
-      <meta name="google-site-verification" content="MfxpNiv0HZrHV7WBv1qOGAHf60DQnY-EjW4kFE38S6Y" />
+      <meta name="google-site-verification=MfxpNiv0HZrHV7WBv1qOGAHf60DQnY-EjW4kFE38S6Y"/>
 <script async src="./analytics.js"></script><script type="text/javascript" src="./hidebib.js"></script>
 <title>Arbish Akram</title>
 <style type="text/css">
