--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=GBK">
-      <meta name="google-site-verification" content="lp9wsGOpnt0qYA0ikt6dhF2_ttkjjBNmtueSEUKEID4" />
+      <meta "google-site-verification=MfxpNiv0HZrHV7WBv1qOGAHf60DQnY-EjW4kFE38S6Y"/>
 <script async src="./analytics.js"></script><script type="text/javascript" src="./hidebib.js"></script>
 <title>Arbish Akram</title>
 <style type="text/css">
