--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 	 <td class="pub_td2"><b>US-GAN: On the importance of Ultimate Skip Connection for Facial Expression Synthesis</b>
 	  <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
           <br><i>ArXiv 2021</i>.
-          <br>[<a href="https://arxiv.org/abs/2112.13002">Paper</a>]
+          <br>[<a href="https://arxiv.org/abs/2112.13002">ArXiv</a>]
           [<a href="papers/usgan/usgan.txt">Bibtex</a>]
 	</td></tr>
 
@@ -223,7 +223,7 @@
 	 <td class="pub_td2"><b>OrthoGAN: Visualizing teeth after Orthodontics treatment using Generative Models</b>
          <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
 <!-- 	 <br><i></i>ArXiv 2021.  -->
-	 <br>[<a href="papers/orthogan/orthogan_preprint.pdf">Paper</a>]
+	 <br>[<a href="papers/orthogan/orthogan_preprint.pdf">Manuscript</a>]
          [<a href="papers/mr/mr.txt">Bibtex</a>]  
 	</td></tr>
 	
