--- a/index.html
+++ b/index.html
@@ -198,6 +198,16 @@
 	<h2>Research</h2>
 
 	<table class="pub_table">
+        <tr>
+	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img2" src='papers/sargan/sargan_teaser.png'/></a></div></td>
+	 <td class="pub_td2"><b>SARGAN: Spatial Attention-based Residuals for Facial Expression Manipulation</b>
+	  <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
+          <br><i>IEEE Transactions on Circuits and Systems for Video Technology (TCSVT, 2023)</i>.
+          <br>[<a href="https://ieeexplore.ieee.org/document/10065495">Paper</a>]
+	  <br>[<a href="https://arxiv.org/abs/2112.13002">ArXiv</a>]
+          [<a href="papers/sargan/sargan.txt">Bibtex</a>]
+	</td></tr>	
+		
 	<tr>
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img2" src='papers/usgan/usgan-teaser.png'/></a></div></td>
 	 <td class="pub_td2"><b>US-GAN: On the importance of Ultimate Skip Connection for Facial Expression Synthesis</b>
