--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/pixel-rr/pixel-rr.png'/></a></div></td>
 	 <td class="pub_td2"><b>Pixel-based Facial Expression Synthesis</b>
          <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
-	 <br><i>ICPR 2021</i>. 
+	 <br><i>25th International Conference on Pattern Recognition (ICPR 2021)</i>. 
 	 <br>[<a href="https://arxiv.org/abs/2010.14397">Paper</a>]
 	 [<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/pixel_fes/ICPR2020_presentation.pdf">Slides</a>] 
 	 [<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/pixel_fes/ICPR2020_poster.pdf">Poster</a>]
@@ -242,7 +242,7 @@
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/mr/mr.png'/></a></div></td>
 	 <td class="pub_td2"><b>Masked Linear Regression for Learning Local Receptive Fields for Facial Expression Synthesis</b>
          <br><a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>, <span class="font-weight-bold">Arbish Akram</span>, <a href='https://itu.edu.pk/faculty-itu/dr-arif-mahmood/'>Arif Mahmood</a>, Sania Ashraf, Kashif Murtaza
-	 <br><i>IJCV 2020</i>. 
+	 <br><i>International Journal of Computer Vision (IJCV, 2020)</i>. 
 	 <br>[<a href="https://link.springer.com/content/pdf/10.1007/s11263-019-01256-3.pdf">Paper</a>] 
 	 [<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/presentation_itu_15_10_2019.pdf">Slides</a>]	
 	 [<a href="https://github.com/arbishakram/masked_regression_code">Github</a>] 
@@ -253,7 +253,7 @@
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/lifesavior/lifesavior.png'/></a></div></td>
 	 <td class="pub_td2"><b>Life Savior: An Integrated Emergency Response System</b>
          <br>Arbish Akram, Maria Anjum, Mariam Rehman, Hafsah Bukhary, Hifza Amir, Rafia Qaisar
-	 <br><i>ICIT 2017</i>. 
+	 <br><i>8th International Conference on Information Technology (ICIT, 2017)</i>. 
 	 <br>[<a href="https://ieeexplore.ieee.org/document/8079981">Paper</a>]
          [<a href="papers/lifesavior/lifesavior.txt">Bibtex</a>]		
 	</td></tr>
