--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 	  <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
           <br><i>IEEE Transactions on Circuits and Systems for Video Technology (TCSVT, 2023)</i>.
           <br>[<a href="https://ieeexplore.ieee.org/document/10065495">Paper</a>]
-	  [<a href="https://arxiv.org/abs/2112.13002">ArXiv</a>]
+	  [<a href="http://arxiv.org/abs/2303.17212">ArXiv</a>]
           [<a href="papers/sargan/sargan.txt">Bibtex</a>]
 	</td></tr>	
 		
