--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 		<h4>PhD Student <br/>
                 PUCIT<br/>
 		arbishakram [at] pucit [dot] edu [dot] pk.</h4>
-		<a href="">Google Scholar</a> / <a href="">GitHub</a> 
+		<a href="https://scholar.google.com/citations?user=9uXz_dIAAAAJ">Google Scholar</a> / <a href="https://github.com/arbishakram">GitHub</a> 
 	</div><br>
 	</td>
 	</tr>
