--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img2" src='papers/usgan/usgan-teaser.png'/></a></div></td>
 	 <td class="pub_td2"><b>US-GAN: On the importance of Ultimate Skip Connection for Facial Expression Synthesis</b>
 	  <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
-          <br><i>ArXiv 2021</i>.
+          <br><i>Multimedia Tools and Applications (MTAP, 2023)</i>.
+	  <br>[<a href="https://arxiv.org/abs/2112.13002">Paper</a>]
           <br>[<a href="https://arxiv.org/abs/2112.13002">ArXiv</a>]
           [<a href="papers/usgan/usgan.txt">Bibtex</a>]
 	</td></tr>
