--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 	  <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
           <br><i>Multimedia Tools and Applications (MTAP, 2023)</i>.
 	  <br>[<a href="https://arxiv.org/abs/2112.13002">Paper</a>]
-          <br>[<a href="https://arxiv.org/abs/2112.13002">ArXiv</a>]
+          [<a href="https://arxiv.org/abs/2112.13002">ArXiv</a>]
           [<a href="papers/usgan/usgan.txt">Bibtex</a>]
 	</td></tr>
 
@@ -234,7 +234,7 @@
 	 <td class="pub_td2"><b>OrthoGAN: Visualizing teeth after Orthodontics treatment using Generative Models</b>
          <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
 <!-- 	 <br><i></i>ArXiv 2021.  -->
-	 <br>[<a href="papers/orthogan/orthogan_preprint.pdf">Manuscript</a>]
+	 <br>[<a href="papers/orthogan/orthogan_preprint.pdf">Preprint</a>]
          [<a href="papers/mr/mr.txt">Bibtex</a>]  
 	</td></tr>
 	
