--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 	</td></tr>	
 		
 	<tr>
-	 <td class="pub_td1"><img class="teaser_img2" width="400" src='papers/usgan/us-gan_teaser.png'/></a></td>
+	 <td class="pub_td1"><img class="teaser_img2" width="400" src='papers/usgan/usgan_teaser.jpg'/></a></td>
 	 <td class="pub_td2"><b>US-GAN: On the importance of Ultimate Skip Connection for Facial Expression Synthesis</b>
 	  <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
           <br><i>Multimedia Tools and Applications (MTAP, 2023)</i>.
