--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 	 <br>[<a href="https://arxiv.org/abs/2010.14397">Paper</a>]
 	 [<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/pixel_fes/ICPR2020_presentation.pdf">Slides</a>] 
 	 [<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/pixel_fes/ICPR2020_poster.pdf">Poster</a>]
-         [<a href="papers/pixel-rr/pixel.rr.txt">Bibtex</a>] 
+         [<a href="papers/pixel-rr/pixel_rr.txt">Bibtex</a>] 
 	</td></tr>
 	
 	<tr>
@@ -235,7 +235,7 @@
          <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
 <!-- 	 <br><i></i>ArXiv 2021.  -->
 	 <br>[<a href="papers/orthogan/orthogan_preprint.pdf">Preprint</a>]
-         [<a href="papers/mr/mr.txt">Bibtex</a>]  
+         [<a href="papers/orthogan/orthogan.txt">Bibtex</a>]  
 	</td></tr>
 	
 	
