--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
 	 <td class="pub_td2"><b>US-GAN: On the importance of Ultimate Skip Connection for Facial Expression Synthesis</b>
 	  <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
           <br><i>Multimedia Tools and Applications (MTAP, 2023)</i>.
-	  <br>[<a href="https://arxiv.org/abs/2112.13002">Paper</a>]
+	  <br>[<a href="https://link.springer.com/article/10.1007/s11042-023-15268-2">Paper</a>]
+          [<a href="https://rdcu.be/ddU2s">SharedIt</a>]
           [<a href="https://arxiv.org/abs/2112.13002">arXiv</a>]
           [<a href="papers/usgan/usgan.txt">Bibtex</a>]
 	</td></tr>
@@ -223,7 +224,8 @@
 	 <td class="pub_td2"><b>Pixel-based Facial Expression Synthesis</b>
          <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
 	 <br><i>25th International Conference on Pattern Recognition (ICPR 2021)</i>. 
-	 <br>[<a href="https://arxiv.org/abs/2010.14397">Paper</a>]
+	 <br>[<a href="https://ieeexplore.ieee.org/abstract/document/9413065">Paper</a>]
+	 [<a href="https://arxiv.org/abs/2010.14397">arXiv</a>]
 	 [<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/pixel_fes/ICPR2020_presentation.pdf">Slides</a>] 
 	 [<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/pixel_fes/ICPR2020_poster.pdf">Poster</a>]
          [<a href="papers/pixel-rr/pixel_rr.txt">Bibtex</a>] 
@@ -245,6 +247,7 @@
          <br><a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>, <span class="font-weight-bold">Arbish Akram</span>, <a href='https://itu.edu.pk/faculty-itu/dr-arif-mahmood/'>Arif Mahmood</a>, Sania Ashraf, Kashif Murtaza
 	 <br><i>International Journal of Computer Vision (IJCV, 2020)</i>. 
 	 <br>[<a href="https://link.springer.com/content/pdf/10.1007/s11263-019-01256-3.pdf">Paper</a>] 
+         [<a href="https://arxiv.org/abs/2011.09104">arXiv</a>]
 	 [<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/presentation_itu_15_10_2019.pdf">Slides</a>]	
 	 [<a href="https://github.com/arbishakram/masked_regression_code">Github</a>] 
 	 [<a href="papers/mr/mr.txt">Bibtex</a>]		
