--- a/index.html
+++ b/index.html
@@ -198,6 +198,16 @@
 	<h2>Research</h2>
 
 	<table class="pub_table">
+	<tr>
+	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img2" src='papers/lsrf/lsrf_teaser.png'/></a></div></td>
+	 <td class="pub_td2"><b>LSRF: Localized and Sparse Receptive Fields for Linear Facial Expression Synthesis based on Global Face Context</b>
+	  <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
+          <br><i>Multimedia Tools and Applications (MTAP, 2023)</i>.
+          <br>[<a href="https://link.springer.com/article/10.1007/s11042-023-16822-8">Paper</a>]
+	  [<a href="https://rdcu.be/dmkiU">SharedIt</a>]
+          [<a href="papers/lsrf/bib.txt">Bibtex</a>]
+	</td></tr>
+		
         <tr>
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img2" src='papers/sargan/sargan-teaser.png'/></a></div></td>
 	 <td class="pub_td2"><b>SARGAN: Spatial Attention-based Residuals for Facial Expression Manipulation</b>
