--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 <div class='section_div'>
 	<h2>About me</h2>
-	<p>I am a fourth year PhD student in the Department of Computer Science at PUCIT, advised by <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>. <br>
+	<p>I am a PhD student in the Department of Computer Science at PUCIT, advised by <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>. <br>
 	 My research interests are in computer vision, machine learning, deep learning and image processing.
 	<br>
 </div>
@@ -206,6 +206,7 @@
           <br>[<a href="https://link.springer.com/article/10.1007/s11042-023-16822-8">Paper</a>]
 	  [<a href="https://rdcu.be/dmkiU">SharedIt</a>]
           [<a href="papers/lsrf/bib.txt">Bibtex</a>]
+          [<a href="https://github.com/arbishakram/LSRF-FES">Code</a>]
 	</td></tr>
 		
         <tr>
@@ -216,6 +217,7 @@
           <br>[<a href="https://ieeexplore.ieee.org/document/10065495">Paper</a>]
 	  [<a href="http://arxiv.org/abs/2303.17212">arXiv</a>]
           [<a href="papers/sargan/sargan.txt">Bibtex</a>]
+	  [<a href="https://github.com/arbishakram/SARGAN">Code</a>]
 	</td></tr>	
 		
 	<tr>
@@ -227,6 +229,7 @@
           [<a href="https://rdcu.be/ddU2s">SharedIt</a>]
           [<a href="https://arxiv.org/abs/2112.13002">arXiv</a>]
           [<a href="papers/usgan/usgan.txt">Bibtex</a>]
+	  [<a href="https://github.com/arbishakram/US-GAN">Code</a>]
 	</td></tr>
 
 	<tr>
@@ -259,7 +262,7 @@
 	 <br>[<a href="https://link.springer.com/content/pdf/10.1007/s11263-019-01256-3.pdf">Paper</a>] 
          [<a href="https://arxiv.org/abs/2011.09104">arXiv</a>]
 	 [<a href="http://faculty.pucit.edu.pk/nazarkhan/work/expression_mapping/presentation_itu_15_10_2019.pdf">Slides</a>]	
-	 [<a href="https://github.com/arbishakram/masked_regression_code">Github</a>] 
+	 [<a href="https://github.com/arbishakram/masked_regression_code">Code</a>] 
 	 [<a href="papers/mr/mr.txt">Bibtex</a>]		
 	</td></tr>
 
