--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 <div class='section_div'>
 	<h2>About me</h2>
-	<p>I am a PhD student in the Department of Computer Science at PUCIT, advised by <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>. <br>
+	<p>I am a PhD student in the Department of Computer Science at the University of the Punjab, advised by <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>. <br>
 	 My research interests are in computer vision, machine learning, deep learning and image processing.
 	<br>
 </div>
