--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 	<tr>
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img2" src='papers/lsrf/lsrf_teaser.png'/></a></div></td>
 	 <td class="pub_td2"><b>LSRF: Localized and Sparse Receptive Fields for Linear Facial Expression Synthesis based on Global Face Context</b>
-	  <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
+	  <br>Arbish Akram and <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
           <br><i>Multimedia Tools and Applications (MTAP, 2023)</i>.
           <br>[<a href="https://link.springer.com/article/10.1007/s11042-023-16822-8">Paper</a>]
 	  [<a href="https://rdcu.be/dmkiU">SharedIt</a>]
@@ -212,7 +212,7 @@
         <tr>
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img2" src='papers/sargan/sargan-teaser.png'/></a></div></td>
 	 <td class="pub_td2"><b>SARGAN: Spatial Attention-based Residuals for Facial Expression Manipulation</b>
-	  <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
+	  <br>Arbish Akram and <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
           <br><i>IEEE Transactions on Circuits and Systems for Video Technology (TCSVT, 2023)</i>.
           <br>[<a href="https://ieeexplore.ieee.org/document/10065495">Paper</a>]
 	  [<a href="http://arxiv.org/abs/2303.17212">arXiv</a>]
@@ -223,7 +223,7 @@
 	<tr>
 	 <td class="pub_td1"><img class="teaser_img2" width="400" src='papers/usgan/usgan-teaser.jpg'/></a></td>
 	 <td class="pub_td2"><b>US-GAN: On the importance of Ultimate Skip Connection for Facial Expression Synthesis</b>
-	  <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
+	  <br>Arbish Akram and <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
           <br><i>Multimedia Tools and Applications (MTAP, 2023)</i>.
 	  <br>[<a href="https://link.springer.com/article/10.1007/s11042-023-15268-2">Paper</a>]
           [<a href="https://rdcu.be/ddU2s">SharedIt</a>]
@@ -235,7 +235,7 @@
 	<tr>
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/pixel-rr/pixel-rr.png'/></a></div></td>
 	 <td class="pub_td2"><b>Pixel-based Facial Expression Synthesis</b>
-         <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
+         <br>Arbish Akram and <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
 	 <br><i>25th International Conference on Pattern Recognition (ICPR 2021)</i>. 
 	 <br>[<a href="https://ieeexplore.ieee.org/abstract/document/9413065">Paper</a>]
 	 [<a href="https://arxiv.org/abs/2010.14397">arXiv</a>]
@@ -247,8 +247,8 @@
 	<tr>
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/orthogan/orthogan_teaser.png'/></a></div></td>
 	 <td class="pub_td2"><b>OrthoGAN: Visualizing teeth after Orthodontics treatment using Generative Models</b>
-         <br>Arbish Akram, <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
-<!-- 	 <br><i></i>ArXiv 2021.  -->
+         <br>Arbish Akram and <a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>
+<!-- 	 <br><i></i>arXiv 2021.  -->
 	 <br>[<a href="papers/orthogan/orthogan_preprint.pdf">Preprint</a>]
          [<a href="papers/orthogan/orthogan.txt">Bibtex</a>]  
 	</td></tr>
@@ -257,7 +257,7 @@
 	<tr>
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/mr/mr.png'/></a></div></td>
 	 <td class="pub_td2"><b>Masked Linear Regression for Learning Local Receptive Fields for Facial Expression Synthesis</b>
-         <br><a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>, <span class="font-weight-bold">Arbish Akram</span>, <a href='https://itu.edu.pk/faculty-itu/dr-arif-mahmood/'>Arif Mahmood</a>, Sania Ashraf, Kashif Murtaza
+         <br><a href='http://faculty.pucit.edu.pk/nazarkhan/'>Nazar Khan</a>, <span class="font-weight-bold">Arbish Akram</span>, <a href='https://itu.edu.pk/faculty-itu/dr-arif-mahmood/'>Arif Mahmood</a>, Sania Ashraf and Kashif Murtaza
 	 <br><i>International Journal of Computer Vision (IJCV, 2020)</i>. 
 	 <br>[<a href="https://link.springer.com/content/pdf/10.1007/s11263-019-01256-3.pdf">Paper</a>] 
          [<a href="https://arxiv.org/abs/2011.09104">arXiv</a>]
@@ -269,7 +269,7 @@
 	<tr>
 	 <td class="pub_td1"><div class="teaser_img_div"><img class="teaser_img" src='papers/lifesavior/lifesavior.png'/></a></div></td>
 	 <td class="pub_td2"><b>Life Savior: An Integrated Emergency Response System</b>
-         <br>Arbish Akram, Maria Anjum, Mariam Rehman, Hafsah Bukhary, Hifza Amir, Rafia Qaisar
+         <br>Arbish Akram, Maria Anjum, Mariam Rehman, Hafsah Bukhary, Hifza Amir and Rafia Qaisar
 	 <br><i>8th International Conference on Information Technology (ICIT, 2017)</i>. 
 	 <br>[<a href="https://ieeexplore.ieee.org/document/8079981">Paper</a>]
          [<a href="papers/lifesavior/lifesavior.txt">Bibtex</a>]		
